--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -147,40 +147,20 @@
 
     <!--tv_register_orregisterwith-->
     <TextView
-        android:id="@+id/tv_register_orregisterwith"
+        android:id="@+id/tv_register_orlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_small"
         android:gravity="center"
-        android:text="@string/or_register_with"
+        android:text="@string/or_log_in"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/textsize_medium"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_register_login" />
     <!--iv_register_facebook-->
-    <ImageView
-        android:id="@+id/iv_register_facebook"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="@dimen/margin_small"
-        android:src="@drawable/ic_facebook"
-        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
-        app:layout_constraintHorizontal_bias="0.7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_register_orregisterwith" />
 
     <!--iv_register_google-->
-    <ImageView
-        android:id="@+id/iv_register_google"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="@dimen/margin_small"
-        android:src="@drawable/ic_google"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.3"
-        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
-        app:layout_constraintTop_toBottomOf="@+id/tv_register_orregisterwith" />
     <ProgressBar
         android:id="@+id/spinner_register"
         android:layout_width="wrap_content"
